@@ -149,7 +149,13 @@ Release 2.7.1 - UNRELEASED
     YARN-3451. Display attempt start time and elapsed time on the web UI.
     (Rohith Sharmaks via jianhe)
 
+<<<<<<< HEAD
 >>>>>>> 9827da9... YARN-3451. Display attempt start time and elapsed time on the web UI. Contributed by Rohith Sharmaks
+=======
+    YARN-3494. Expose AM resource limit and usage in CS QueueMetrics. (Rohith
+    Sharmaks via jianhe)
+
+>>>>>>> dc4698b... YARN-3494. Expose AM resource limit and usage in CS QueueMetrics. Contributed by Rohith Sharmaks
   OPTIMIZATIONS
 >>>>>>> 5e4d457... YARN-3248. Correct fix version from branch-2.7 to branch-2.8 in the change log.
 
